dist_man1_MANS=

if BUILD_COUNOSHD
  dist_man1_MANS+=counoshd.1
endif

if ENABLE_QT
  dist_man1_MANS+=counosh-qt.1
endif

if BUILD_COUNOSH_CLI
  dist_man1_MANS+=counosh-cli.1
endif

if BUILD_COUNOSH_TX
  dist_man1_MANS+=counosh-tx.1
endif

if ENABLE_WALLET
if BUILD_COUNOSH_WALLET
  dist_man1_MANS+=counosh-wallet.1
endif
endif
